
ChangeLog
 [ + added, - removed, * changed ]
 * 23Jun2020 Forces exit on second termination signal
 * 22Jun2020 Changes to use new binutils >= 2.34 API
 * 22Jun2020 Changes merger block distribution to avoid processes with 0 traces
 * 22Jun2020 Fixes checks for `javah` to compile Extrae with JDK > 9
 * 19Jun2020 Updates common.h to meet C++11 syntax
 * 12Jun2020 Solves duplicate capture of C and Fortran MPI calls when using Intel implementations
 * 08Jun2020 Fixes finalization issues when Extrae is initialized by API and another runtime
 * 26May2020 Adds option to instrument I/O internals
 + 25May2020 Fixes race condition in pthread instrumentation and adds wrappers for pthread_cond_signal, pthread_cond_broadcast, pthread_cond_wait, pthread_cond_timedwait
 * 29Apr2020 Fixes local to world rank translations for comms going thru an intercommunicator created with MPI_Intercomm_create
 + 29Apr2020 Adds environment variable EXTRAE_ENFORCE_FS_SYNC to ensure file system synchronization after creating trace files and folders
 * 17Mar2020 Changes for Workflows and Distributed Computing group
 + 13Mar2020 Added instrumentation for MPI_Comm_dup_with_info
 + 28Jan2020 Adds events ADD_RESERVED_MEM_EV and SUB_RESERVED_MEM_EV to track dynamic memory usage
 * 22Jan2020 Fixes race condition in flushing/closing buffers between Backend_Finalize and Backend_Flush_pThread
 * 20Jan2019 Fixes circular buffering to dump remaining data at the end of the run outside online mode
 + 18Nov2019 Adds instrumentation wrappers for MPI_Comm_split_type
 + 07Nov2019 Adds environment variable EXTRAE_UNSET_PRELOAD to clear the LD_PRELOAD once the tracing is loaded
 * 25Oct2019 Fixes double emission of python events call and c_call
 * 10Sep2019 Fixes configure check for MPI_Comm_spawn
 + 17Jul2019 Adds Python bindings for Extrae_shutdown and _restart
 * 16Jul2019 Fixes correlation of PEBS samples with reallocated objects