@@ -9,7 +9,7 @@
 rm -fr TRACE.sym TRACE.mpits set-0
 
 #export EXTRAE_HOME=`cat ../../../PREFIX`
-export EXTRAE_HOME=$(top_builddir)
+export EXTRAE_HOME=${top_builddir}
 
 if test ! -x ${EXTRAE_HOME}/bin/extrae ; then
 	echo "Could not execute binary rewriter test because ${EXTRAE_HOME}/bin/extrae has not been installed. Run make install first."
